add cmd arguments

--- a/Cloudberry/Cloudberry.vcxproj
+++ b/Cloudberry/Cloudberry.vcxproj
@@ -80,10 +80,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CBLexer.cpp" />
+    <ClCompile Include="CBParser.cpp" />
     <ClCompile Include="Cloudberry.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CBLexer.h" />
+    <ClInclude Include="CBParser.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="test.cbs" />
