--- a/Cloudberry/Cloudberry.vcxproj.filters
+++ b/Cloudberry/Cloudberry.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="CBLexer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CBParser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CBLexer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CBParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
