--- a/Cloudberry/Cloudberry.vcxproj.filters
+++ b/Cloudberry/Cloudberry.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="CBParser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CloudberryCompileOptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="test.cbs" />
