--- a/Cloudberry/Cloudberry.vcxproj.filters
+++ b/Cloudberry/Cloudberry.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="CBParser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CBCompilerPython.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CBLexer.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CloudberryCompileOptions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CBCompilerPython.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
